Adding meta data to HTML pages

--- a/templates/top-players.html
+++ b/templates/top-players.html
@@ -20,6 +20,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="keywords" content="scifi, ui pack, ui framework, sci-fi framework, sci-fi elements pack">
+    <meta name="description" content="Arashtad Sci-Fi UI Elements Pack is a free and open source product suitable for Sci-Fi type web pages, games, etc.">
     <title>Top Players</title>
     <link rel="stylesheet" href="../css/master.min.css">
     <link rel="stylesheet" href="../css/overlay-scrollbars.min.css">
