Adding the screen class

--- a/scss/master.scss
+++ b/scss/master.scss
@@ -1109,3 +1109,10 @@ img {
         }
     }
 }
+.screen {
+    height: 29%;
+    position: absolute;
+    top: 30%;
+    transform: translateX(-50%);
+    left: 50%;
+}
