--- a/scss/master.scss
+++ b/scss/master.scss
@@ -476,6 +476,36 @@
                 @include radius(50%);
                 vertical-align: top;
             }
+            &-1 {
+                flex: 1;
+            }
+            &-2 {
+                flex: 2;
+            }
+            &-3 {
+                flex: 3;
+            }
+            &-4 {
+                flex: 4;
+            }
+            &-5 {
+                flex: 5;
+            }
+            &-6 {
+                flex: 6;
+            }
+            &-7 {
+                flex: 7;
+            }
+            &-8 {
+                flex: 8;
+            }
+            &-9 {
+                flex: 9;
+            }
+            &-10 {
+                flex: 10;
+            }
         }
         &:nth-child(odd) {
             .ar-table-cell {
