Imporving the style.

--- a/scss/assets.scss
+++ b/scss/assets.scss
@@ -289,6 +289,9 @@
 .visible {
     display: block;
 }
+.block {
+    display: block !important;
+}
 .pirulen {
     font-family: 'pirulen', sans-serif;
 }
