--- a/templates/verify-user.html
+++ b/templates/verify-user.html
@@ -27,6 +27,9 @@
     <link rel="stylesheet" href="../fonts/fontawesome-4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+    <a href="../" class="ar-button small margin">
+        <span class="fa fa-home"></span> Home
+    </a>
     <main>
         <div class="ar-container">
             <div class="ar-box thin">
