--- a/scss/dom.scss
+++ b/scss/dom.scss
@@ -50,3 +50,53 @@ pre {
 main {
     min-height: 93%;
 }
+input[type=text],
+input[type=email],
+input[type=number],
+input[type=password],
+textarea {
+    padding: 7px;
+    border: 1px solid $bg2;
+    @include radius(4px);
+    background: $dark;
+    color: $accent;
+    @include transition(all .3s);
+
+    &:focus {
+        border: 1px solid $accent;
+        outline: none;
+    }
+}
+input[type=file] {
+    position: relative;
+    width: 18px;
+    height: 18px;
+    padding: 7px;
+    @include radius(4px);
+    font-size: 18px;
+    line-height: 18px;
+    text-align: center;
+    cursor: pointer;
+
+    &:before {
+        font-family: FontAwesome;
+        content: '\f093';
+        position: absolute;
+        top: 0;
+        left: 0;
+        display: inline-block;
+        width: 100%;
+        height: 100%;
+        padding: 7px;
+        @include radius(4px);
+        box-sizing: border-box;
+        background: $accent;
+        color: $light;
+        @include transition(all .3s);
+    }
+    &:hover {
+        &:before {
+            background: lighten($accent, 13%);
+        }
+    }
+}
