Adding a to-do list style.

--- a/scss/assets.scss
+++ b/scss/assets.scss
@@ -26,6 +26,15 @@
 .clear {
     clear: both;
 }
+.float-right {
+    float: right;
+}
+.float-left {
+    float: left;
+}
+.float-none {
+    float: none;
+}
 .left {
     text-align: left;
 }
